--- a/migration/23.10.3-hotfix/BUILD.bazel
+++ b/migration/23.10.3-hotfix/BUILD.bazel
@@ -5,6 +5,6 @@ java_binary(
     name = "besu",
     main_class = "org.hyperledger.besu.Besu",
     runtime_deps = [
-        artifact("org.hyperledger.besu.internal:besu", "23103_hotfix_maven"),
+        artifact("org.hyperledger.besu.internal:besu", "besu_maven_23103_hotfix"),
     ],
 )
