--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -4,7 +4,7 @@
 module(
     name = "besu_contrib",
     compatibility_level = 0,
-    repo_name = "besu-contrib",
+    repo_name = "org_hyperledger_besu_contrib",
     version = "2025.0.0-SNAOPSHOT",
 )
 
@@ -35,7 +35,7 @@ maven.install(
     excluded_artifacts = [
         "io.grpc:grpc-core",
     ],
-    lock_file = "//:migration/23.10.3-hotfix/maven_install.json",
+    lock_file = "//rebuild/23.10.3-hotfix:maven_install.json",
 )
 
 maven.install(
@@ -45,5 +45,18 @@ maven.install(
     lock_file = "//:migration/24.10.0/maven_install.json",
 )
 
-use_repo(maven, "besu_maven_23103_hotfix")
-use_repo(maven, "besu_maven_24100")
+use_repo(
+    maven,
+    "besu_maven_23103_hotfix",
+    "besu_maven_24100",
+)
+
+http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
+
+http_archive(
+    name = "org_hyperledger_besu_23103_hotfix",
+    build_file = "@org_hyperledger_besu_contrib//rebuild/23.10.3-hotfix:besu.BUILD",
+    strip_prefix = "besu-23.10.3-hotfix",
+    sha256 = "7e98182a42571652c2da797e818c7a7352013e8eae41a3979670d6b47c5f50fe",
+    urls = ["https://github.com/hyperledger/besu/archive/refs/tags/23.10.3-hotfix.tar.gz"],
+)
