--- a/rebuild/23.10.3-hotfix/BUILD.bazel
+++ b/rebuild/23.10.3-hotfix/BUILD.bazel
@@ -1,6 +1,11 @@
-load("@rules_java//java:defs.bzl", "java_binary")
+load("@rules_java//java:java_binary.bzl", "java_binary")
 
 package(default_visibility = ["//visibility:public"])
+
+exports_files([
+    "besu.BUILD",
+    "maven_install.json",
+])
 
 java_binary(
     name = "besu",
