Initialized adding rebuild for besu v24.10.0

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -42,7 +42,7 @@ maven.install(
     name = "besu_maven_24100",
     artifacts = BESU_24100_ARTIFACTS,
     repositories = BESU_MAVEN_REPOSITORIES,
-    lock_file = "//:migration/24.10.0/maven_install.json",
+    lock_file = "//rebuild/24.10.0:maven_install.json",
 )
 
 use_repo(
@@ -59,4 +59,12 @@ http_archive(
     strip_prefix = "besu-23.10.3-hotfix",
     sha256 = "7e98182a42571652c2da797e818c7a7352013e8eae41a3979670d6b47c5f50fe",
     urls = ["https://github.com/hyperledger/besu/archive/refs/tags/23.10.3-hotfix.tar.gz"],
+)
+
+http_archive(
+    name = "org_hyperledger_besu_24100",
+    build_file = "@org_hyperledger_besu_contrib//rebuild/24.10.0:besu.BUILD",
+    strip_prefix = "besu-24.10.0",
+    sha256 = "8f673c0e54c45e181b8b76631733468c4d31250ffef3bdd6af082393a214c06c",
+    urls = ["https://github.com/hyperledger/besu/archive/refs/tags/24.10.0.tar.gz"],
 )
