Adding bazel rebuild for besu v23.10.3-hotfix

--- a/rebuild/23.10.3-hotfix/BUILD.bazel
+++ b/rebuild/23.10.3-hotfix/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@rules_java//java:java_binary.bzl", "java_binary")
+load("@rules_java//java:defs.bzl", "java_library", "java_plugin")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -7,10 +7,10 @@ exports_files([
     "maven_install.json",
 ])
 
-java_binary(
-    name = "besu",
-    main_class = "org.hyperledger.besu.Besu",
-    runtime_deps = [
-        "@org_hyperledger_besu_23103_hotfix//:besu",
-    ],
-)
+# java_binary(
+#     name = "besu",
+#     main_class = "org.hyperledger.besu.Besu",
+#     runtime_deps = [
+#         "@org_hyperledger_besu_23103_hotfix//:besu",
+#     ],
+# )
