--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -13,7 +13,132 @@ bazel_dep(name = "rules_java", version = "8.15.2")
 bazel_dep(name = "rules_jvm_external", version = "6.5")
 
 BESU_23103_HOTFIX_ARTIFACTS = [
-    "org.hyperledger.besu.internal:besu:23.10.3-hotfix",
+    "org.antlr:antlr4:4.11.1",
+    "org.antlr:antlr4-runtime:4.11.1",
+    "com.fasterxml.jackson.core:jackson-databind:2.14.2",
+    "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.14.2",
+    "com.github.ben-manes.caffeine:caffeine:3.1.8",
+    "com.github.tomakehurst:wiremock-jre8-standalone:2.35.0",
+    "com.github.tomakehurst:wiremock-jre8:2.35.0",
+    "com.google.auto.service:auto-service:1.0.1",
+    "com.google.dagger:dagger:2.45",
+    "com.google.dagger:dagger-compiler:2.45",
+    "com.google.errorprone:error_prone_annotation:2.18.0",
+    "com.google.errorprone:error_prone_check_api:2.18.0",
+    "com.google.errorprone:error_prone_core:2.18.0",
+    "com.google.errorprone:error_prone_test_helpers:2.18.0",
+    "com.google.guava:guava:31.1-jre",
+    "com.graphql-java:graphql-java:20.1",
+    "com.splunk.logging:splunk-library-javalogging:1.11.5",
+    "com.squareup.okhttp3:okhttp:4.10.0",
+    "commons-codec:commons-codec:1.15",
+    "commons-io:commons-io:2.11.0",
+    "dnsjava:dnsjava:3.5.2",
+    "info.picocli:picocli:4.7.1",
+    "info.picocli:picocli-codegen:4.7.1",
+    "io.grpc:grpc-all:1.59.0",
+    "io.grpc:grpc-core:1.59.0",
+    "io.grpc:grpc-netty:1.59.0",
+    "io.grpc:grpc-stub:1.59.0",
+    "io.kubernetes:client-java:18.0.0",
+    "io.netty:netty-all:4.1.100.Final",
+    "io.netty:netty-tcnative-boringssl-static:2.0.62.Final",
+    "io.netty:netty-transport-native-epoll:4.1.100.Final",
+    "io.netty:netty-transport-native-kqueue:4.1.100.Final",
+    "io.netty:netty-transport-native-unix-common:4.1.100.Final",
+    "io.opentelemetry:opentelemetry-api:1.24.0",
+    "io.opentelemetry:opentelemetry-exporter-otlp:1.24.0",
+    "io.opentelemetry:opentelemetry-extension-trace-propagators:1.24.0",
+    "io.opentelemetry.proto:opentelemetry-proto:0.19.0-alpha",
+    "io.opentelemetry:opentelemetry-sdk-metrics:1.24.0",
+    "io.opentelemetry:opentelemetry-sdk-trace:1.24.0",
+    "io.opentelemetry:opentelemetry-sdk:1.24.0",
+    "io.opentelemetry:opentelemetry-sdk-extension-autoconfigure:1.24.0-alpha",
+    "io.opentelemetry:opentelemetry-semconv:1.24.0-alpha",
+    "io.opentelemetry.instrumentation:opentelemetry-okhttp-3.0:1.24.0-alpha",
+    "io.opentracing.contrib:opentracing-okhttp3:3.0.0",
+    "io.opentracing:opentracing-api:0.33.0",
+    "io.opentracing:opentracing-util:0.33.0",
+    "io.pkts:pkts-core:3.0.10",
+    "io.prometheus:simpleclient:0.9.0",
+    "io.prometheus:simpleclient_common:0.9.0",
+    "io.prometheus:simpleclient_hotspot:0.9.0",
+    "io.prometheus:simpleclient_pushgateway:0.9.0",
+    "io.prometheus:simpleclient_guava:0.16.0",
+    "io.reactivex.rxjava2:rxjava:2.2.21",
+    "io.vertx:vertx-auth-jwt:4.3.5",
+    "io.vertx:vertx-codegen:4.3.5",
+    "io.vertx:vertx-core:4.3.5",
+    "io.vertx:vertx-junit5:4.3.5",
+    "io.vertx:vertx-unit:4.3.5",
+    "io.vertx:vertx-web:4.3.5",
+    "io.vertx:vertx-web-client:4.3.5",
+    "io.vertx:vertx-auth-jwt:4.3.5",
+    "junit:junit:4.13.2",
+    "net.java.dev.jna:jna:5.13.0",
+    "org.apache.commons:commons-compress:1.23.0",
+    "org.apache.commons:commons-lang3:3.12.0",
+    "org.apache.commons:commons-text:1.10.0",
+    "org.apache.logging.log4j:log4j-api:2.20.0",
+    "org.apache.logging.log4j:log4j-core:2.20.0",
+    "org.apache.logging.log4j:log4j-jul:2.20.0",
+    "org.apache.logging.log4j:log4j-slf4j2-impl:2.20.0",
+    "io.tmio:tuweni-bytes:2.4.2",
+    "io.tmio:tuweni-config:2.4.2",
+    "io.tmio:tuweni-concurrent:2.4.2",
+    "io.tmio:tuweni-crypto:2.4.2",
+    "io.tmio:tuweni-devp2p:2.4.2",
+    "io.tmio:tuweni-dns-discovery:2.4.2",
+    "io.tmio:tuweni-io:2.4.2",
+    "io.tmio:tuweni-net:2.4.2",
+    "io.tmio:tuweni-rlp:2.4.2",
+    "io.tmio:tuweni-toml:2.4.2",
+    "io.tmio:tuweni-units:2.4.2",
+    "org.assertj:assertj-core:3.24.2",
+    "org.awaitility:awaitility:4.2.0",
+    "org.bouncycastle:bcpkix-jdk18on:1.76",
+    "org.bouncycastle:bcprov-jdk18on:1.76",
+    "org.fusesource.jansi:jansi:2.4.0",
+    "org.openjdk.jol:jol-core:0.17",
+    "tech.pegasys:jc-kzg-4844:0.8.0",
+    "org.hyperledger.besu:arithmetic:0.8.2",
+    "org.hyperledger.besu:ipa-multipoint:0.8.2",
+    "org.hyperledger.besu:bls12-381:0.8.2",
+    "org.hyperledger.besu:secp256k1:0.8.2",
+    "org.hyperledger.besu:secp256r1:0.8.2",
+    "org.hyperledger.besu:blake2bf:0.8.2",
+    "org.immutables:value-annotations:2.9.3",
+    "org.immutables:value-processor:2.9.3",
+    "org.immutables:value:2.9.3",
+    "org.java-websocket:Java-WebSocket:1.5.3",
+    "org.jetbrains.kotlin:kotlin-stdlib:1.8.10",
+    "org.junit.jupiter:junit-jupiter:5.8.2",
+    "org.junit.jupiter:junit-jupiter-api:5.8.2",
+    "org.junit.jupiter:junit-jupiter-engine:5.8.2",
+    "org.junit.jupiter:junit-jupiter-params:5.8.2",
+    "org.junit.platform:junit-platform-runner:1.9.2",
+    "org.junit.vintage:junit-vintage-engine:5.9.2",
+    "org.jupnp:org.jupnp.support:2.7.0",
+    "org.jupnp:org.jupnp:2.7.0",
+    "org.mockito:mockito-core:4.11.0",
+    "org.mockito:mockito-junit-jupiter:4.11.0",
+    "org.openjdk.jmh:jmh-core:1.36",
+    "org.openjdk.jmh:jmh-generator-annprocess:1.36",
+    "org.owasp.encoder:encoder:1.2.3",
+    "org.rocksdb:rocksdbjni:8.3.2",
+    "org.slf4j:slf4j-api:2.0.7",
+    "org.slf4j:slf4j-nop:2.0.7",
+    "org.springframework.security:spring-security-crypto:6.0.2",
+    "org.testcontainers:testcontainers:1.17.6",
+    "org.web3j:quorum:4.9.5",
+    "org.web3j:abi:4.9.7",
+    "org.web3j:besu:4.9.7",
+    "org.web3j:core:4.9.7",
+    "org.web3j:crypto:4.9.7",
+    "org.xerial.snappy:snappy-java:1.1.9.1",
+    "org.yaml:snakeyaml:2.0",
+    "tech.pegasys.discovery:discovery:22.2.0",
+    "com.github.oshi:oshi-core:6.4.1",
 ]
 
 BESU_24100_ARTIFACTS = [
@@ -32,11 +157,10 @@ maven.install(
     name = "besu_maven_23103_hotfix",
     artifacts = BESU_23103_HOTFIX_ARTIFACTS,
     repositories = BESU_MAVEN_REPOSITORIES,
-    excluded_artifacts = [
-        "io.grpc:grpc-core",
-    ],
     lock_file = "//rebuild/23.10.3-hotfix:maven_install.json",
 )
+
+use_repo(maven, "besu_maven_23103_hotfix")
 
 maven.install(
     name = "besu_maven_24100",
@@ -45,11 +169,7 @@ maven.install(
     lock_file = "//rebuild/24.10.0:maven_install.json",
 )
 
-use_repo(
-    maven,
-    "besu_maven_23103_hotfix",
-    "besu_maven_24100",
-)
+use_repo(maven, "besu_maven_24100")
 
 http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
 
@@ -59,6 +179,13 @@ http_archive(
     strip_prefix = "besu-23.10.3-hotfix",
     sha256 = "7e98182a42571652c2da797e818c7a7352013e8eae41a3979670d6b47c5f50fe",
     urls = ["https://github.com/hyperledger/besu/archive/refs/tags/23.10.3-hotfix.tar.gz"],
+)
+
+http_archive(
+    name = "dagger_245",
+    strip_prefix = "dagger-dagger-2.45",
+    sha256 = "8f55f8b081a72835fed96be66dbfccb95ee2ceff092872397e5e639cccec2114",
+    urls = ["https://github.com/google/dagger/archive/dagger-2.45.zip"],
 )
 
 http_archive(
