--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -142,7 +142,133 @@ BESU_23103_HOTFIX_ARTIFACTS = [
 ]
 
 BESU_24100_ARTIFACTS = [
-    "org.hyperledger.besu.internal:besu:24.10.0",
+    "com.fasterxml.jackson.core:jackson-databind:2.17.2",
+    "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.17.2",
+    "com.github.ben-manes.caffeine:caffeine:3.1.8",
+    "com.google.protobuf:protobuf-java:3.25.5",
+    "com.github.oshi:oshi-core:6.6.3",
+    "com.google.auto.service:auto-service:1.1.1",
+    "com.google.dagger:dagger:2.52",
+    "com.google.dagger:dagger-compiler:2.52",
+    "org.hyperledger.besu:besu-errorprone-checks:1.0.0",
+    "com.google.guava:guava:33.3.0-jre",
+    "com.graphql-java:graphql-java:22.2",
+    "com.splunk.logging:splunk-library-javalogging:1.11.8",
+    "com.squareup.okhttp3:okhttp:4.12.0",
+    "commons-codec:commons-codec:1.16.0",
+    "commons-io:commons-io:2.16.1",
+    "commons-net:commons-net:3.11.1",
+    "dnsjava:dnsjava:3.6.1",
+    "info.picocli:picocli:4.7.6",
+    "info.picocli:picocli-codegen:4.7.6",
+    "io.grpc:grpc-all:1.66.0",
+    "io.grpc:grpc-core:1.66.0",
+    "io.grpc:grpc-netty:1.66.0",
+    "io.grpc:grpc-stub:1.66.0",
+    "io.kubernetes:client-java:18.0.1",
+    "io.netty:netty-all:4.1.112.Final",
+    "io.netty:netty-tcnative-boringssl-static:2.0.66.Final",
+    "io.netty:netty-transport-native-epoll:4.1.112.Final",
+    "io.netty:netty-transport-native-kqueue:4.1.112.Final",
+    "io.netty:netty-transport-native-unix-common:4.1.112.Final",
+    "io.opentelemetry:opentelemetry-api:1.41.0",
+    "io.opentelemetry:opentelemetry-exporter-otlp:1.41.0",
+    "io.opentelemetry:opentelemetry-extension-trace-propagators:1.41.0",
+    "io.opentelemetry:opentelemetry-sdk-metrics:1.41.0",
+    "io.opentelemetry:opentelemetry-sdk-trace:1.41.0",
+    "io.opentelemetry:opentelemetry-sdk:1.41.0",
+    "io.opentelemetry:opentelemetry-sdk-extension-autoconfigure:1.41.0",
+    "io.opentelemetry.instrumentation:opentelemetry-okhttp-3.0:2.7.0-alpha",
+    "io.opentelemetry.proto:opentelemetry-proto:1.3.2-alpha",
+    "io.opentelemetry.semconv:opentelemetry-semconv:1.27.0-alpha",
+    "io.opentracing.contrib:opentracing-okhttp3:3.0.0",
+    "io.opentracing:opentracing-api:0.33.0",
+    "io.opentracing:opentracing-util:0.33.0",
+    "io.pkts:pkts-core:3.0.10",
+    "io.prometheus:simpleclient:0.16.0",
+    "io.prometheus:simpleclient_common:0.16.0",
+    "io.prometheus:simpleclient_hotspot:0.16.0",
+    "io.prometheus:simpleclient_pushgateway:0.16.0",
+    "io.prometheus:simpleclient_guava:0.16.0",
+    "io.reactivex.rxjava2:rxjava:2.2.21",
+    "io.tmio:tuweni-bytes:2.4.2",
+    "io.tmio:tuweni-config:2.4.2",
+    "io.tmio:tuweni-concurrent:2.4.2",
+    "io.tmio:tuweni-crypto:2.4.2",
+    "io.tmio:tuweni-devp2p:2.4.2",
+    "io.tmio:tuweni-io:2.4.2",
+    "io.tmio:tuweni-net:2.4.2",
+    "io.tmio:tuweni-rlp:2.4.2",
+    "io.tmio:tuweni-toml:2.4.2",
+    "io.tmio:tuweni-units:2.4.2",
+    "io.vertx:vertx-auth-jwt:4.5.9",
+    "io.vertx:vertx-codegen:4.5.9",
+    "io.vertx:vertx-core:4.5.9",
+    "io.vertx:vertx-junit5:4.5.9",
+    "io.vertx:vertx-unit:4.5.9",
+    "io.vertx:vertx-web:4.5.9",
+    "io.vertx:vertx-web-client:4.5.9",
+    "junit:junit:4.13.2",
+    "net.java.dev.jna:jna:5.14.0",
+    "org.antlr:antlr4:4.11.1",
+    "org.antlr:antlr4-runtime:4.11.1",
+    "org.apache.commons:commons-collections4:4.4",
+    "org.apache.commons:commons-compress:1.27.1",
+    "org.apache.commons:commons-lang3:3.17.0",
+    "org.apache.commons:commons-text:1.12.0",
+    "org.apache.logging.log4j:log4j-api:2.23.1",
+    "org.apache.logging.log4j:log4j-core:2.23.1",
+    "org.apache.logging.log4j:log4j-jul:2.23.1",
+    "org.apache.logging.log4j:log4j-slf4j2-impl:2.23.1",
+    "org.assertj:assertj-core:3.26.3",
+    "org.awaitility:awaitility:4.2.2",
+    "org.bouncycastle:bcpkix-jdk18on:1.78.1",
+    "org.bouncycastle:bcprov-jdk18on:1.78.1",
+    "org.fusesource.jansi:jansi:2.4.1",
+    "org.hyperledger.besu:arithmetic:0.9.7",
+    "org.hyperledger.besu:ipa-multipoint:0.9.7",
+    "org.hyperledger.besu:bls12-381:0.9.7",
+    "org.hyperledger.besu:secp256k1:0.9.7",
+    "org.hyperledger.besu:secp256r1:0.9.7",
+    "org.hyperledger.besu:blake2bf:0.9.7",
+    "org.hyperledger.besu:gnark:0.9.7",
+    "org.immutables:value-annotations:2.10.1",
+    "org.immutables:value-processor:2.10.1",
+    "org.immutables:value:2.10.1",
+    "org.java-websocket:Java-WebSocket:1.5.7",
+    "org.jacoco:org.jacoco.agent:0.8.12",
+    "org.jacoco:org.jacoco.core:0.8.12",
+    "org.jetbrains.kotlin:kotlin-stdlib:2.0.20",
+    "org.junit.jupiter:junit-jupiter:5.11.0",
+    "org.junit.jupiter:junit-jupiter-api:5.11.0",
+    "org.junit.jupiter:junit-jupiter-engine:5.11.0",
+    "org.junit.jupiter:junit-jupiter-params:5.11.0",
+    "org.openjdk.jol:jol-core:0.17",
+    "org.junit.platform:junit-platform-runner:1.9.2",
+    "org.junit.vintage:junit-vintage-engine:5.10.1",
+    "org.jupnp:org.jupnp.support:3.0.2",
+    "org.jupnp:org.jupnp:3.0.2",
+    "org.mockito:mockito-core:5.13.0",
+    "org.mockito:mockito-junit-jupiter:5.13.0",
+    "org.openjdk.jmh:jmh-core:1.37",
+    "org.openjdk.jmh:jmh-generator-annprocess:1.37",
+    "org.owasp.encoder:encoder:1.3.1",
+    "org.rocksdb:rocksdbjni:8.3.2",  # 8.9.1 causes a bug with a FOREST canary
+    "org.slf4j:slf4j-api:2.0.16",
+    "org.slf4j:slf4j-nop:2.0.16",
+    "org.springframework.security:spring-security-crypto:6.3.3",
+    "org.testcontainers:testcontainers:1.20.1",
+    "org.web3j:quorum:4.10.0",
+    "org.web3j:abi:4.12.1",
+    "org.web3j:besu:4.12.1",
+    "org.web3j:core:4.12.1",
+    "org.web3j:crypto:4.12.1",
+    "org.wiremock:wiremock:3.9.1",
+    "org.xerial.snappy:snappy-java:1.1.10.6",
+    "org.yaml:snakeyaml:2.0",
+    "org.apache.maven:maven-artifact:3.9.6",
+    "tech.pegasys:jc-kzg-4844:1.0.0",
+    "tech.pegasys.discovery:discovery:24.6.0",
 ]
 
 BESU_MAVEN_REPOSITORIES = [
