--- a/rebuild/24.10.0/BUILD.bazel
+++ b/rebuild/24.10.0/BUILD.bazel
@@ -2,10 +2,10 @@ load("@rules_java//java:java_binary.bzl", "java_binary")
 
 package(default_visibility = ["//visibility:public"])
 
-java_binary(
-    name = "besu",
-    main_class = "org.hyperledger.besu.Besu",
-    runtime_deps = [
-        "@org_hyperledger_besu_24100//:besu",
-    ],
-)
+# java_binary(
+#     name = "besu",
+#     main_class = "org.hyperledger.besu.Besu",
+#     runtime_deps = [
+#         "@org_hyperledger_besu_24100//:besu",
+#     ],
+# )
