--- a/migration/23.10.3-hotfix/BUILD.bazel
+++ b/migration/23.10.3-hotfix/BUILD.bazel
@@ -3,9 +3,9 @@ load("@rules_java//java:defs.bzl", "java_binary")
 package(default_visibility = ["//visibility:public"])
 
 java_binary(
-    name = "besu",
+    name = "besu_app",
     main_class = "org.hyperledger.besu.Besu",
     runtime_deps = [
-        "@org_hyperledger_besu_23103_hotfix//:besu",
+        "@besu_migration_23103_hotfix//:besu",
     ],
 )
