Rename besu contrib bazel module name

--- a/.bazelrc
+++ b/.bazelrc
@@ -1,2 +1,6 @@
-build --java_language_version=21 --java_runtime_version=21
-build --tool_java_language_version=21 --tool_java_runtime_version=21
+# Enable Java 21 language features
+common --java_language_version=21 --java_runtime_version=21
+common --tool_java_language_version=21 --tool_java_runtime_version=21
+
+# User-specific .bazelrc
+try-import %workspace%/user.bazelrc
