--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -7,6 +7,7 @@ module(
 )
 
 # Bazel module dependencies
+bazel_dep(name = "rules_license", version = "1.0.0")
 bazel_dep(name = "platforms", version = "0.0.11")
 bazel_dep(name = "rules_img", version = "0.2.4")
 bazel_dep(name = "rules_java", version = "8.15.2")
