--- a/migration/migration.MODULE.bazel
+++ b/migration/migration.MODULE.bazel
@@ -287,13 +287,17 @@ http_archive(
     build_file = "@besu_contrib//migration/23.10.3-hotfix:besu.BUILD",
     sha256 = "7e98182a42571652c2da797e818c7a7352013e8eae41a3979670d6b47c5f50fe",
     strip_prefix = "besu-23.10.3-hotfix",
+    patch_strip = 1,
+    patches = ["@besu_23103_hotfix//:version.patch"],
     urls = ["https://github.com/hyperledger/besu/archive/refs/tags/23.10.3-hotfix.tar.gz"],
 )
 
 http_archive(
-    name = "besu_migration_24100",
+    name = "besu_migration_241000",
     build_file = "@besu_contrib//migration/24.10.0:besu.BUILD",
     sha256 = "8f673c0e54c45e181b8b76631733468c4d31250ffef3bdd6af082393a214c06c",
     strip_prefix = "besu-24.10.0",
+    patch_strip = 1,
+    patches = ["@besu_241000//:version.patch"],
     urls = ["https://github.com/hyperledger/besu/archive/refs/tags/24.10.0.tar.gz"],
 )
