--- a/migration/23.10.3-hotfix/BUILD.bazel
+++ b/migration/23.10.3-hotfix/BUILD.bazel
@@ -9,7 +9,7 @@ java_binary(
     name = "besu",
     main_class = "org.hyperledger.besu.Besu",
     runtime_deps = [
-        "@besu_migration_23103_hotfix//:override_besu",
+        "@besu_migration_23103_hotfix//:besu",
     ],
 )
 
